<resources>
    <string name="app_name">AlfAppCloud</string>


    <!---Login Strings-->
    <string name="btnLogin">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="emptyFields">Empty fields</string>
    <string name="logged">Logged</string>
    <string name="registerNotYet">SING UP</string>
    <string name="forgotPassword">FORGOT PASSWORD</string>


    <!---Signup Strings-->
    <string name="name">Name</string>
    <string name="loginInstead">LOG IN INSTEAD</string>
    <string name="signUp">Sign Up</string>


    <!--Useful Strings-->
    <string name="error">Error</string>


    <!--Nav String-->
    <string name="hours">Hours</string>
    <string name="send">Send</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Open navigation drawer</string>

    <!--Hours String-->
    <string name="verified">Verified</string>


    <!--Drawer Menu Teacher-->
    <string name="search">Search</string>


    <!--Drawer Menu Administrator-->
    <string name="teachers">Teachers</string>

</resources>
